[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD/player_hp_bar.gd" type="Script" id=1]
[ext_resource path="res://HUD/ui_player_damaged.tres" type="Animation" id=2]
[ext_resource path="res://HUD/popup_player.tres" type="Animation" id=3]
[ext_resource path="res://HUD/rubies_panel.gd" type="Script" id=4]
[ext_resource path="res://HUD/popup.tres" type="Animation" id=5]
[ext_resource path="res://sounds/coins.ogg" type="AudioStream" id=6]

[node name="HUD" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="player_hp_bar" type="ProgressBar" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 355.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 8.0
exp_edit = false
rounded = false
percent_visible = false
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="player_hp_bar" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ui_player_damaged = ExtResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="player_popup" type="Label" parent="player_hp_bar" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="popup_animation" type="AnimationPlayer" parent="player_hp_bar/player_popup" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/popup_player = ExtResource( 3 )
blend_times = [  ]

[node name="rubie_panel" type="Panel" parent="." index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -71.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Rect" ]

[node name="rubies_label" type="Label" parent="rubie_panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 2.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "5"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="rubies_popup" type="Label" parent="rubie_panel" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="popup_animation" type="AnimationPlayer" parent="rubie_panel/rubies_popup" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/popup = ExtResource( 5 )
blend_times = [  ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="rubie_panel" index="2"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"


